# mod-aggregator

./: .cursorrules  .gitignore  AI_SETUP.md  BROWSER_MODE.md  COMMIT_MESSAGE.md  LOGGING.md  PROJECT_CONTEXT.md  README.md  SCRIPT_CONFLICTS.md  SETUP.md  cypress.config.ts  element-selector-demo.html  index.html  package-lock.json  package.json  run-dev.ps1  svelte.config.js  tailwind.config.js  test-selection-interference.html  tsconfig.json  vite.config.ts  vitest.config.ts
.cursor/rules/: README.md  backend.mdc  code-patterns.mdc  frontend.mdc
cypress/e2e/: refresh-button.cy.ts
examples/: synthira-config.json
src/: App.svelte  README.md  app.css  main.ts
src-tauri/: .taurignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  main.rs  models.rs  notification.rs  parser.rs  parser_builder.rs
src-tauri/src/parsers/: mod.rs  synthira.rs
src/__tests__/: App.test.ts
src/components/: ContextMenu.svelte  ElementSelector.svelte  ModCard.svelte  ModsList.svelte  NotificationsPanel.svelte  PageIframe.svelte  PageViewer.svelte  ParserBuilder.svelte  ParserNode.svelte  README.md  RecentUrlsDropdown.svelte  Sidebar.svelte  SiteForm.svelte  SitesManager.svelte  Tooltip.svelte  ViewerHeader.svelte
src/components/__tests__/: Sidebar.test.ts
src/components/icons/: ArrowPathIcon.svelte  BellIcon.svelte  CheckIcon.svelte  CodeIcon.svelte  CogIcon.svelte  HomeIcon.svelte  MenuIcon.svelte  (+5 more)
src/lib/: README.md  ai-detector.ts  api.ts  tauri-mock.ts  tauri-wrapper.ts
src/styles/: page-viewer.css
src/test/: setup.ts
(+17 files in other folders)
